Refactored the code in a way, that I moved out the FranchiseCoreService and differentiated between the FranchiseService and the FranchiseMLService to have the machine learning stuff separated.