@@ -1,18 +1,7 @@
 package de.neebs.franchise.control;
 
-import lombok.Builder;
-import lombok.Getter;
-import lombok.Setter;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.spark.ml.feature.VectorAssembler;
-import org.apache.spark.ml.linalg.Vector;
-import org.apache.spark.ml.linalg.Vectors;
-import org.apache.spark.ml.regression.LinearRegression;
-import org.apache.spark.ml.regression.LinearRegressionModel;
-import org.apache.spark.sql.Dataset;
-import org.apache.spark.sql.Row;
-import org.apache.spark.sql.SparkSession;
-import org.apache.spark.sql.types.StructType;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -21,12 +10,13 @@ import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class FranchiseService {
     private static final Random RANDOM = new Random();
 
     private final Map<GameRound, Map<Draw, List<Integer>>> learnings = new HashMap<>();
 
-    private LinearRegressionModel model;
+    private final FranchiseCoreService franchiseCoreService;
 
     public GameRound init(List<PlayerColor> players) {
         MoneyMap moneyMap = Rules.MONEY_MAP.get(players.size());
@@ -75,7 +65,7 @@ public class FranchiseService {
             log.info("Round " + (i + 1) + ": " + set.size());
         }
         for (GameRoundDraw round : set) {
-            scoreRound(round.getGameRound().getGameRound(), null);
+            franchiseCoreService.scoreRound(round.getGameRound().getGameRound(), null);
         }
         log.info("Scored: " + set.size());
         return set;
@@ -83,9 +73,9 @@ public class FranchiseService {
 
     private List<GameRoundDraw> nextRound2(GameRound gameRound) {
         List<GameRoundDraw> rounds = new ArrayList<>();
-        List<Draw> draws = nextDraws(gameRound);
+        List<Draw> draws = franchiseCoreService.nextDraws(gameRound);
         for (Draw draw : draws) {
-            rounds.add(GameRoundDraw.builder().draw(draw).gameRound(manualDraw(gameRound, draw)).build());
+            rounds.add(GameRoundDraw.builder().draw(draw).gameRound(franchiseCoreService.manualDraw(gameRound, draw)).build());
         }
         return rounds;
     }
@@ -102,51 +92,10 @@ public class FranchiseService {
         log.info("Average known states: " + knownStates / times);
     }
 
-    public String play2(GameRound round, int times, boolean header) {
-        StringBuilder sb = new StringBuilder();
-        if (header) {
-            sb.append(String.join(",", createHeader()));
-            sb.append(System.lineSeparator());
-        }
-        for (int i = 0; i < times; i++) {
-            Map<GameRound, Integer> map = play2(round);
-            for (Map.Entry<GameRound, Integer> entry : map.entrySet()) {
-                List<Integer> run = createVectorizedBoard(entry.getKey(), true);
-                run.add(entry.getValue());
-                sb.append(String.join(",", run.stream().map(String::valueOf).toList()));
-                sb.append(System.lineSeparator());
-            }
-        }
-        return new String(sb);
-    }
-
-    public Map<GameRound, Integer> play2(GameRound round) {
-        List<GameRound> rounds = new ArrayList<>();
-        rounds.add(round);
-        while (!round.isEnd()) {
-            List<Draw> draws = nextDraws(round);
-            int random;
-            if (draws.size() > 1) {
-                random = RANDOM.nextInt(draws.size() - 1) + 1;
-            } else {
-                random = 0;
-            }
-            Draw draw = draws.get(random);
-            round = manualDraw(round, draw).getGameRound();
-            rounds.add(round);
-        }
-        Map<GameRound, Integer> map = new HashMap<>();
-        Map<PlayerColor, Integer> score = score(round.getScores());
-        for (GameRound gr : rounds) {
-            map.put(gr, score.get(gr.getActual() == null ? gr.getNext() : gr.getActual()));
-        }
-        return map;
-    }
-
     public List<GameRoundDraw> play(GameRound round, boolean useLearnings) {
         List<GameRoundDraw> list = new ArrayList<>();
         while (!round.isEnd()) {
-            List<Draw> draws = nextDraws(round);
+            List<Draw> draws = franchiseCoreService.nextDraws(round);
             int random;
             if (draws.size() > 1) {
                 random = RANDOM.nextInt(draws.size() - 1) + 1;
@@ -160,9 +109,9 @@ public class FranchiseService {
                 draw = draws.get(random);
             }
             list.add(GameRoundDraw.builder().gameRound(new ExtendedGameRound(round, null)).draw(draw).build());
-            round = manualDraw(round, draw).getGameRound();
+            round = franchiseCoreService.manualDraw(round, draw).getGameRound();
         }
-        Map<PlayerColor, Integer> score = score(round.getScores());
+        Map<PlayerColor, Integer> score = franchiseCoreService.score(round.getScores());
         for (GameRoundDraw grd : list) {
             learn(grd.getGameRound().getGameRound(), grd.getDraw(), score);
         }
@@ -196,307 +145,6 @@ public class FranchiseService {
         list.add(playerScores.get(gameRound.getNext()));
     }
 
-    private Set<City> retrieveOwnedCities(Map<City, CityPlate> plates, PlayerColor playerColor) {
-        return plates.entrySet().stream().filter(f -> f.getValue().getBranches().contains(playerColor)).map(Map.Entry::getKey).collect(Collectors.toSet());
-    }
-
-    public List<Draw> nextDraws(GameRound gameRound) {
-        if (gameRound.isEnd()) {
-            return List.of();
-        } else if (gameRound.getRound() + 1 <= gameRound.getPlayers().size()) {
-            return City.getTowns().stream().filter(f -> !gameRound.getPlates().containsKey(f)).map(f -> Draw.builder().extension(Set.of(f)).increase(List.of()).build()).toList();
-        } else {
-            int income = calcIncome(gameRound, gameRound.getNext());
-            int money = gameRound.getScores().get(gameRound.getNext()).getMoney() + income;
-            // evaluate owned cities
-            Set<City> owned = retrieveOwnedCities(gameRound.getPlates(), gameRound.getNext());
-            // ne extension
-            Map<Draw, Integer> map = new HashMap<>();
-            map.put(Draw.builder().extension(Set.of()).increase(List.of()).build(), money);
-            if (canUseBonusTile(gameRound)) {
-                map.put(Draw.builder().extension(Set.of()).increase(List.of()).bonusTileUsage(BonusTileUsage.MONEY).build(), money + 10);
-            }
-            // extension to one city in the neighbourhood
-            Map<Draw, Integer> extension = evaluateExtensions(gameRound, owned, map);
-            // is a second extension possible?
-            if (canUseBonusTile(gameRound)) {
-                map.putAll(evaluateExtensions(gameRound, owned, extension));
-            }
-            map.putAll(extension);
-            // increases
-            return increase(gameRound, owned, map);
-        }
-    }
-
-    private List<Draw> increase(GameRound gameRound, Set<City> owned, Map<Draw, Integer> drawMoneyMap) {
-        List<Draw> list = new ArrayList<>();
-        for (Map.Entry<Draw, Integer> entry : drawMoneyMap.entrySet()) {
-            Set<Draw> inner = new HashSet<>();
-            inner.add(entry.getKey());
-            for (City city : gameRound.getPlates().entrySet().stream().filter(f -> owned.contains(f.getKey())).filter(f -> !f.getValue().isClosed()).map(Map.Entry::getKey).toList()) {
-                Set<Draw> increases = increaseForCity(gameRound, entry, inner, city);
-                inner.addAll(increases);
-            }
-            list.addAll(inner);
-        }
-        return list;
-    }
-
-    private Set<Draw> increaseForCity(GameRound gameRound, Map.Entry<Draw, Integer> entry, Set<Draw> inner, City city) {
-        Set<Draw> increases = new HashSet<>();
-        for (Draw draw : inner) {
-            if (draw.getIncrease().size() < entry.getValue()) {
-                List<City> cities = new ArrayList<>(draw.getIncrease());
-                cities.add(city);
-                increases.add(Draw.builder().extension(draw.getExtension()).increase(cities).bonusTileUsage(draw.getBonusTileUsage()).build());
-                if (canUseBonusTile(gameRound) && !draw.isBonusTile()) {
-                    CityPlate cityPlate = gameRound.getPlates().get(city);
-                    if (cityPlate.getBranches().size() + 2 > city.getSize()) {
-                         continue; // not enough places left
-                    }
-                    if (cities.size() >= entry.getValue()) {
-                        continue; // we do not have enough money to pay it
-                    }
-                    if (cityPlate.getBranches().stream().filter(f -> gameRound.getNext() == f).count() + 1 > city.getSize() / 2) {
-                        continue; // the first plate will already close it
-                    }
-                    cities = new ArrayList<>(cities);
-                    cities.add(city);
-                    increases.add(Draw.builder().extension(draw.getExtension()).increase(cities).bonusTileUsage(BonusTileUsage.INCREASE).build());
-                }
-            }
-        }
-        return increases;
-    }
-
-    private boolean canUseBonusTile(GameRound gameRound) {
-        return gameRound.getRound() >= gameRound.getPlayers().size() * 2 && gameRound.getScores().get(gameRound.getNext()).getBonusTiles() > 0;
-    }
-
-    private Map<Draw, Integer> evaluateExtensions(GameRound gameRound, Set<City> owned, Map<Draw, Integer> basis) {
-        Map<Draw, Integer> map = new HashMap<>();
-        for (Map.Entry<Draw, Integer> entry : basis.entrySet()) {
-            for (City city : Arrays.stream(City.values()).filter(f -> !owned.contains(f)).toList()) {
-                Optional<Connection> optionalConnection = Rules.CONNECTIONS.stream()
-                        .filter(f -> f.getCities().contains(city) && f.getCities().stream().anyMatch(owned::contains))
-                        .min(Comparator.comparingInt(Connection::getCosts));
-                if (optionalConnection.isPresent()
-                        && entry.getValue() >= optionalConnection.get().getCosts()
-                        && (gameRound.getPlates().get(city) == null || !gameRound.getPlates().get(city).isClosed())
-                        && !entry.getKey().getExtension().contains(city)
-                        && (!entry.getKey().isBonusTile() || entry.getKey().getExtension().isEmpty())) {
-                    Set<City> set = new HashSet<>(entry.getKey().getExtension());
-                    set.add(city);
-                    map.put(Draw.builder().extension(set).increase(List.of()).bonusTileUsage(set.size() > 1 ? BonusTileUsage.EXTENSION : entry.getKey().getBonusTileUsage()).build(), entry.getValue() - optionalConnection.get().getCosts());
-                }
-            }
-        }
-        return map;
-    }
-
-    private void nextPlayer(GameRound next) {
-        int index = next.getPlayers().indexOf(next.getNext());
-        if (next.isInitialization()) {
-            if (index > 0) {
-                next.setNext(next.getPlayers().get(index - 1));
-            }
-        } else {
-            index++;
-            next.setNext(next.getPlayers().get(index % next.getPlayers().size()));
-        }
-    }
-
-    void scoreRegions(GameRound gameRound, AdditionalInfo additionalInfo) {
-        for (Region region : Arrays.stream(Region.values()).filter(f -> !gameRound.getScoredRegions().contains(f)).toList()) {
-            boolean scoreIt = true;
-            for (City city : region.getCities()) {
-                CityPlate plate = gameRound.getPlates().get(city);
-                if (plate == null || !plate.isClosed()) {
-                    scoreIt = false;
-                }
-            }
-            if (scoreIt) {
-                scoreRegion(gameRound, region, additionalInfo);
-            }
-        }
-        gameRound.setEnd(gameRound.getScoredRegions().size() > Region.values().length - 3);
-        if (gameRound.isEnd()) {
-            scoreRound(gameRound, additionalInfo);
-        }
-    }
-
-    private void scoreRegion(GameRound gameRound, Region region, AdditionalInfo additionalInfo) {
-        Map<PlayerColor, Long> counts = gameRound.getPlates().entrySet().stream()
-                .filter(f -> region.getCities().contains(f.getKey()))
-                .flatMap(f -> f.getValue().getBranches().stream())
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-        Map<Long, Set<PlayerColor>> map = counts.entrySet().stream().collect(Collectors.groupingBy(Map.Entry::getValue, Collectors.mapping(Map.Entry::getKey, Collectors.toSet())));
-        List<Set<PlayerColor>> list = map.entrySet().stream().sorted((o1, o2) -> Long.compare(o2.getKey(), o1.getKey())).map(Map.Entry::getValue).toList();
-        int profitLevel = 1;
-        for (Set<PlayerColor> set : list) {
-            List<PlayerColor> players = orderPlayersForRegionScoring(set, gameRound.getFirstCityScorers().get(region), gameRound.getPlayers());
-            for (PlayerColor player : players) {
-                int influence = region.getByProfitLevel(profitLevel);
-                Score score = gameRound.getScores().get(player);
-                score.setInfluence(score.getInfluence() + influence);
-                if (gameRound.getPlayers().size() == 2) {
-                    profitLevel += 2;
-                } else {
-                    profitLevel++;
-                }
-                if (additionalInfo != null) {
-                    additionalInfo.getInfluenceComments().add("Scoring region " + region + " influence for " + player + ": " + influence);
-                }
-            }
-        }
-        Score score = gameRound.getActualScore();
-        int influence = Region.getRegionFinishInfluence().get(gameRound.getScoredRegions().size());
-        score.setInfluence(score.getInfluence() + influence);
-        if (additionalInfo != null) {
-            additionalInfo.getInfluenceComments().add("Scoring region " + region + " closed for " + gameRound.getNext() + ": " + influence);
-        }
-        gameRound.getScoredRegions().add(region);
-    }
-
-    private List<PlayerColor> orderPlayersForRegionScoring(Set<PlayerColor> set, PlayerColor closer, List<PlayerColor> players) {
-        if (set.size() == 1) {
-            return List.of(set.iterator().next());
-        }
-        List<PlayerColor> list = new ArrayList<>();
-        for (int i = players.indexOf(closer); i < players.size(); i++) {
-            if (set.contains(players.get(i))) {
-                list.add(players.get(i));
-            }
-        }
-        for (int i = 0; i <= players.indexOf(closer) - 1; i++) {
-            if (set.contains(players.get(i))) {
-                list.add(players.get(i));
-            }
-        }
-        return list;
-    }
-
-    private void scoreCities(GameRound round, AdditionalInfo additionalInfo) {
-        Score score = round.getScores().get(round.getNext());
-        for (Map.Entry<City, CityPlate> entry : round.getPlates().entrySet()) {
-            if (entry.getKey().getSize() == 1 && !entry.getValue().isClosed()) {
-                entry.getValue().setClosed(true);
-            }
-            if (entry.getValue().isClosed()) {
-                continue;
-            }
-
-            Map<PlayerColor, Long> map = entry.getValue().getBranches().stream().collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-            long max = map.values().stream().max(Comparator.naturalOrder()).orElse(0L);
-            Set<PlayerColor> bestPlayers = map.entrySet().stream().filter(f -> f.getValue() == max).map(Map.Entry::getKey).collect(Collectors.toSet());
-            PlayerColor playerColor = null;
-            Integer influence = null;
-            if (max > entry.getKey().getSize() / 2) {
-                playerColor = bestPlayers.iterator().next();
-                influence = entry.getKey().getSize();
-            } else if (entry.getValue().getBranches().size() == entry.getKey().getSize()) {
-                playerColor = entry.getValue().getBranches().stream().filter(bestPlayers::contains).findFirst().orElseThrow();
-                influence = entry.getKey().getSize() / 2;
-            }
-            if (playerColor != null) {
-                score.setInfluence(score.getInfluence() + influence);
-                if (additionalInfo != null) {
-                    additionalInfo.getInfluenceComments().add("Scoring city " + entry.getKey() + " most influence for " + playerColor + ": " + influence);
-                }
-                entry.getValue().getBranches().removeIf(f -> f == round.getNext());
-                entry.getValue().getBranches().add(round.getNext());
-                entry.getValue().setClosed(true);
-                Region region = Arrays.stream(Region.values()).filter(f -> f.getCities().contains(entry.getKey())).findAny().orElseThrow();
-                round.getFirstCityScorers().computeIfAbsent(region, k -> round.getNext());
-            }
-        }
-    }
-
-    private void openFranchise(GameRound round) {
-        Score score = round.getScores().get(round.getNext());
-        for (City city : score.getExpansions()) {
-            CityPlate plate = round.getPlates().get(city);
-            if (plate == null) {
-                plate = new CityPlate(false, new ArrayList<>());
-                round.getPlates().put(city, plate);
-            }
-            plate.getBranches().add(round.getNext());
-        }
-        score.getExpansions().clear();
-    }
-
-    private void expand(GameRound gameRound, City city, AdditionalInfo additionalInfo) {
-        CityPlate optional = gameRound.getPlates().get(city);
-        if (optional != null) {
-            // if city is already close, we cannot expand to there
-            if (optional.isClosed()) {
-                throw new IllegalStateException();
-            }
-            // if the player has already a branch here
-            if (optional.getBranches().contains(gameRound.getNext())) {
-                throw new IllegalStateException();
-            }
-        }
-        Set<City> owned = gameRound.getPlates().entrySet().stream().filter(f -> f.getValue().getBranches().contains(gameRound.getActual())).map(Map.Entry::getKey).collect(Collectors.toSet());
-        Optional<Connection> optionalConnection = Rules.CONNECTIONS.stream()
-                .filter(f -> f.getCities().contains(city) && f.getCities().stream().anyMatch(owned::contains))
-                .min(Comparator.comparingInt(Connection::getCosts));
-        if (optionalConnection.isPresent() && (gameRound.getScores().get(gameRound.getNext()).getMoney() >= optionalConnection.get().getCosts())) {
-            Score score = gameRound.getScores().get(gameRound.getNext());
-            score.getExpansions().add(city);
-            score.setMoney(score.getMoney() - optionalConnection.get().getCosts());
-            if (additionalInfo != null) {
-                additionalInfo.getInfluenceComments().add("Extension costs for " + city + ": "+ optionalConnection.get().getCosts());
-            }
-        } else {
-            throw new IllegalStateException();
-        }
-    }
-
-    public int calcIncome(GameRound gameRound, PlayerColor playerColor) {
-        return Rules.MONEY_MAP.get(gameRound.getPlayers().size()).getMoneyByScore(calcIncomeScore(playerColor, gameRound.getPlates()));
-    }
-
-    private int calcIncomeScore(PlayerColor playerColor, Map<City, CityPlate> plates) {
-        int moneyScore = 0;
-        for (Map.Entry<City, CityPlate> entry : plates.entrySet().stream().filter(f -> !f.getValue().isClosed() && f.getValue().getBranches().contains(playerColor)).collect(Collectors.toSet())) {
-            moneyScore += entry.getKey().getSize() - entry.getValue().getBranches().size();
-        }
-        return moneyScore;
-    }
-
-    public void scoreRound(GameRound round, AdditionalInfo additionalInfo) {
-        scoreTowns(round, additionalInfo);
-        scoreMoney(round, additionalInfo, 3);
-        scoreBonusTiles(round, additionalInfo, 4);
-    }
-
-    private void scoreBonusTiles(GameRound round, AdditionalInfo additionalInfo, int value) {
-        for (Map.Entry<PlayerColor, Score> entry : round.getScores().entrySet()) {
-            Score score = entry.getValue();
-
-            int influence = score.getBonusTiles() * value;
-            score.setInfluence(score.getInfluence() + influence);
-            score.setBonusTiles(0);
-            if (additionalInfo != null) {
-                additionalInfo.getInfluenceComments().add("Final score bonus tiles for " + entry.getKey() + ": " + influence);
-            }
-        }
-    }
-
-    private void scoreMoney(GameRound round, AdditionalInfo additionalInfo, int divisor) {
-        for (Map.Entry<PlayerColor, Score> entry : round.getScores().entrySet()) {
-            Score score = entry.getValue();
-
-            int influence = score.getMoney() / divisor;
-            score.setInfluence(score.getInfluence() + influence);
-            score.setMoney(score.getMoney() % divisor);
-            if (additionalInfo != null) {
-                additionalInfo.getInfluenceComments().add("Final score money for " + entry.getKey() + ": " + influence);
-            }
-        }
-    }
-
     int openPlates(GameRound round) {
         return Arrays.stream(City.values())
                 .filter(f -> round.getPlayers().size() > 2 || round.getPlates().get(f) == null || round.getPlates().get(f).getBranches().get(0) != PlayerColor.BLACK)
@@ -525,24 +173,8 @@ public class FranchiseService {
     private void scoreIncome(GameRound round, int divisor) {
         for (Map.Entry<PlayerColor, Score> entry : round.getScores().entrySet()) {
             Score score = entry.getValue();
-            int influence = (calcIncomeScore(entry.getKey(), round.getPlates())) / divisor;
+            int influence = (franchiseCoreService.calcIncomeScore(entry.getKey(), round.getPlates())) / divisor;
             score.setInfluence(score.getInfluence() + influence);
-        }
-    }
-
-    private void scoreTowns(GameRound round, AdditionalInfo additionalInfo) {
-        Map<PlayerColor, Long> towns = round.getPlates().entrySet().stream()
-                .filter(f -> f.getKey().getSize() == 1)
-                .filter(f -> round.getPlayers().contains(f.getValue().getBranches().get(0)))
-                .map(f -> f.getValue().getBranches().get(0))
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-        for (Map.Entry<PlayerColor, Long> entry : towns.entrySet()) {
-            Score score = round.getScores().get(entry.getKey());
-            int influence = entry.getValue().intValue();
-            score.setInfluence(score.getInfluence() + influence);
-            if (additionalInfo != null) {
-                additionalInfo.getInfluenceComments().add("Final score towns for " + entry.getKey() + ": " + influence);
-            }
         }
     }
 
@@ -583,127 +215,15 @@ public class FranchiseService {
     private Map<GameRoundDraw, Map<PlayerColor, Integer>> score(List<GameRoundDraw> rounds) {
         Map<GameRoundDraw, Map<PlayerColor, Integer>> map = new HashMap<>();
         for (GameRoundDraw round : rounds) {
-            Map<PlayerColor, Integer> scores = score(round.getGameRound().getGameRound().getScores());
+            Map<PlayerColor, Integer> scores = franchiseCoreService.score(round.getGameRound().getGameRound().getScores());
             map.put(round, scores);
         }
         return map;
     }
 
-    private Map<PlayerColor, Integer> score(Map<PlayerColor, Score> s) {
-        return calculateInfluenceDifferences(s.entrySet().stream()
-                .collect(Collectors.toMap(Map.Entry::getKey, f -> f.getValue().getInfluence())));
-    }
-
-    Map<PlayerColor, Integer> calculateInfluenceDifferences(Map<PlayerColor, Integer> influences) {
-        Map<PlayerColor, Integer> scores = new EnumMap<>(PlayerColor.class);
-        for (Map.Entry<PlayerColor, Integer> entry : influences.entrySet()) {
-            int o1MyInfluence = entry.getValue();
-            int o1SecondInfluence = influences.entrySet().stream()
-                    .filter(f -> !f.getKey().equals(entry.getKey()))
-                    .max(Comparator.comparingInt(Map.Entry::getValue))
-                    .orElseThrow().getValue();
-            scores.put(entry.getKey(), o1MyInfluence - o1SecondInfluence);
-        }
-        return scores;
-    }
-
     public Draw computerDraw(GameRound gameRound) {
-        List<Draw> draws = nextDraws(gameRound);
+        List<Draw> draws = franchiseCoreService.nextDraws(gameRound);
         return filterDrawsByLearnings(gameRound, draws).orElse(draws.get(RANDOM.nextInt(draws.size())));
-    }
-
-    public ExtendedGameRound manualDraw(GameRound oldGameRound, Draw draw) {
-        GameRound gameRound = GameRound.init(oldGameRound);
-        AdditionalInfo additionalInfo = new AdditionalInfo();
-        additionalInfo.setInfluenceComments(new ArrayList<>());
-        if (gameRound.isInitialization()) {
-            manualDrawInitialization(gameRound, draw.getExtension());
-        } else {
-            manualDrawStandard(gameRound, draw.getExtension(), draw.getIncrease(), draw.getBonusTileUsage(), additionalInfo);
-        }
-        nextPlayer(gameRound);
-        return new ExtendedGameRound(gameRound, additionalInfo);
-    }
-
-    private void manualDrawStandard(GameRound gameRound, Set<City> extension, List<City> increase, BonusTileUsage bonusTile, AdditionalInfo additionalInfo) {
-        Map<City, Long> counts = isDrawAllowed(gameRound, extension, increase, bonusTile);
-        Score score = gameRound.getActualScore();
-        int income = calcIncome(gameRound, gameRound.getActual());
-        if (bonusTile == BonusTileUsage.MONEY) {
-            income += 10;
-        }
-        if (additionalInfo != null) {
-            additionalInfo.setMoney(score.getMoney());
-            additionalInfo.setIncome(income);
-        }
-        score.setMoney(score.getMoney() + income);
-        if (bonusTile != null) {
-            score.setBonusTiles(score.getBonusTiles() - 1);
-        }
-
-        for (City city : extension) {
-            expand(gameRound, city, additionalInfo);
-        }
-        for (Map.Entry<City, Long> entry : counts.entrySet()) {
-            CityPlate plate = gameRound.getPlates().get(entry.getKey());
-            if (!plate.isClosed() // not already closed
-                    && plate.getBranches().contains(gameRound.getNext()) // have an own branch in th ecity
-                    && score.getMoney() >= entry.getValue() // have enough value for building the branch(es)
-                    && plate.getBranches().size() + entry.getValue() <= entry.getKey().getSize()) { // enough empty spaces for the branches
-                for (int i = 0; i < entry.getValue(); i++) {
-                    plate.getBranches().add(gameRound.getNext());
-                }
-                score.setMoney(score.getMoney() - entry.getValue().intValue());
-            } else {
-                throw new IllegalArgumentException("Cannot increase market share in " + entry.getKey().getName());
-            }
-        }
-        openFranchise(gameRound);
-        scoreCities(gameRound, additionalInfo);
-        scoreRegions(gameRound, additionalInfo);
-    }
-
-    private Map<City, Long> isDrawAllowed(GameRound gameRound, Set<City> extension, List<City> increase, BonusTileUsage bonusTile) {
-        if (bonusTile != null && gameRound.getActualScore().getBonusTiles() == 0) {
-            throw new IllegalArgumentException("All bonus tiles are already used");
-        }
-        if (extension.size() == 1 && bonusTile == BonusTileUsage.EXTENSION) {
-            throw new IllegalArgumentException("No bonus tile needed for expansion to one city");
-        }
-        if (extension.size() == 2 && bonusTile != BonusTileUsage.EXTENSION) {
-            throw new IllegalArgumentException("Expansion to two cities is only allowed with bonus tile");
-        }
-        if (extension.size() > 2) {
-            throw new IllegalArgumentException("Expansion to more then two cities is not allowed");
-        }
-        Map<City, Long> counts = increase.stream().collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-        if (counts.values().stream().noneMatch(f -> f > 1) && bonusTile == BonusTileUsage.INCREASE) {
-            throw new IllegalArgumentException("No bonus tile need for one increase per city");
-        }
-        if (counts.values().stream().filter(f -> f > 1).count() == 1 && bonusTile != BonusTileUsage.INCREASE) {
-            throw new IllegalArgumentException("Increasing one city more then once per round is only allowed when using a bonus tile");
-        }
-        if (counts.values().stream().anyMatch(f -> f > 2)) {
-            throw new IllegalArgumentException("Increasing one city more then twice is always prohibited");
-        }
-        return counts;
-    }
-
-    private void manualDrawInitialization(GameRound gameRound, Set<City> extension) {
-        if (extension.size() != 1) {
-            throw new IllegalArgumentException("In initialization phase exactly one extension is needed");
-        }
-        City city = extension.iterator().next();
-        if (!City.getTowns().contains(city)) {
-            throw new IllegalArgumentException("In initialization phase only towns are allowed");
-        }
-        CityPlate plate = gameRound.getPlates().get(city);
-        if (plate != null) {
-            throw new IllegalArgumentException("Can only use towns, which are not occupied so far");
-        }
-        plate = new CityPlate(true, new ArrayList<>());
-        plate.getBranches().add(gameRound.getNext());
-        gameRound.getPlates().put(city, plate);
     }
 
     private List<Draw> filterAndSortDraws(GameRound round, List<Draw> draws) {
@@ -735,8 +255,8 @@ public class FranchiseService {
 
         int extremeScore = round.getNext() == actual ? -10000 : +10000;
         ScoredDraw bestMove = null;
-        for (Draw draw : filterAndSortDraws(round, nextDraws(round))) {
-            GameRound newBoard = manualDraw(round, draw).getGameRound();
+        for (Draw draw : filterAndSortDraws(round, franchiseCoreService.nextDraws(round))) {
+            GameRound newBoard = franchiseCoreService.manualDraw(round, draw).getGameRound();
             if (scoredDraws != null) {
                 log.info("Analyzing draw: " + draw);
             }
@@ -793,8 +313,8 @@ public class FranchiseService {
         }
 
         ScoredDraw bestMove = null;
-        for (Draw draw : filterAndSortDraws(round, nextDraws(round))) {
-            GameRound newBoard = manualDraw(round, draw).getGameRound();
+        for (Draw draw : filterAndSortDraws(round, franchiseCoreService.nextDraws(round))) {
+            GameRound newBoard = franchiseCoreService.manualDraw(round, draw).getGameRound();
             if (scoredDraws != null) {
                 log.info("Analyzing draw: " + draw);
             }
@@ -834,12 +354,12 @@ public class FranchiseService {
 
     private int evaluatePosition(GameRound round, PlayerColor color) {
         GamePhase phase = evaluateGamePhase(round);
-        scoreTowns(round, null);
-        scoreMoney(round, null, switch (phase) {
+        franchiseCoreService.scoreTowns(round, null);
+        franchiseCoreService.scoreMoney(round, null, switch (phase) {
             case START -> 6;
             case GROW, END -> 3;
         });
-        scoreBonusTiles(round, null, switch (phase) {
+        franchiseCoreService.scoreBonusTiles(round, null, switch (phase) {
             case START -> 1;
             case GROW -> 2;
             case END -> 4;
@@ -850,12 +370,12 @@ public class FranchiseService {
             case END -> 5;
         });
         scoreRegionPossession(round);
-        return score(round.getScores()).get(color);
+        return franchiseCoreService.score(round.getScores()).get(color);
     }
 
     private void scoreRegionPossession(GameRound round) {
         for (PlayerColor playerColor : round.getPlayers()) {
-            Set<City> ownedCities = retrieveOwnedCities(round.getPlates(), playerColor);
+            Set<City> ownedCities = franchiseCoreService.retrieveOwnedCities(round.getPlates(), playerColor);
             int possessedRegions = (int)Arrays.stream(Region.values())
                     .filter(f -> ownedCities.stream().anyMatch(g -> f.getCities().contains(g))).count();
             Score score = round.getScores().get(playerColor);
@@ -884,123 +404,5 @@ public class FranchiseService {
             log.info(result.toString());
             return result.getDraw();
         }
-    }
-
-    public List<String> createHeader() {
-        List<String> result = new ArrayList<>();
-        result.add("actual");
-        result.add("next");
-        for (City city : City.values()) {
-            for (int i = 0; i < city.getSize(); i++) {
-                result.add(city.name() + i);
-            }
-        }
-        for (PlayerColor color : PlayerColor.values()) {
-            result.add(color.name() + "BonusTile");
-            result.add(color.name() + "Influence");
-            result.add(color.name() + "Money");
-        }
-        result.add("Score");
-        return result;
-    }
-
-    public List<Integer> createVectorizedBoard(GameRound round, boolean includePlayerStats) {
-        List<Integer> result = new ArrayList<>();
-        result.add(round.getActual() == null ? round.getNext().ordinal() : round.getActual().ordinal());
-        result.add(round.getNext().ordinal());
-        for (City city : City.values()) {
-            CityPlate plate = round.getPlates().get(city);
-            if (plate == null) {
-                plate = new CityPlate(false, new ArrayList<>());
-            }
-            for (int i = 0; i < city.getSize(); i++) {
-                if (i < plate.getBranches().size()) {
-                    result.add(plate.getBranches().get(i).ordinal());
-                } else {
-                    result.add(-1);
-                }
-            }
-        }
-        if (includePlayerStats) {
-            for (PlayerColor color : PlayerColor.values()) {
-                Score score = round.getScores().get(color);
-                if (score != null) {
-                    result.add(score.getBonusTiles());
-                    result.add(score.getInfluence());
-                    result.add(score.getMoney());
-                } else {
-                    result.add(-1);
-                    result.add(-1);
-                    result.add(-1);
-                }
-            }
-        }
-        return result;
-    }
-
-    public void setupLearnings(GameRound gameRound) {
-        SparkSession spark = SparkSession.builder()
-                    .appName("Franchise ML Example")
-                    .master("local[*]")
-                    .config("spark.driver.extraJavaOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED")
-                    .config("spark.executor.extraJavaOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --conf spark.dynamicAllocation.enabled=false")
-                    .config("spark.ui.enabled", "false") // Disable Spark UI
-                    .getOrCreate();
-
-        String tmpDir = System.getProperty("java.io.tmpdir");
-
-        String dataFile = tmpDir + "data.csv";
-
-        Dataset<Row> df = spark.read()
-                    .format("csv")
-                    .option("header", "true")
-                    .option("inferSchema", "true")
-                    .load(dataFile);
-
-        StructType schema = df.schema();
-        String[] inputCols = schema.fieldNames();
-        List<String> inputs = Arrays.asList(inputCols);
-        inputs = new ArrayList<>(inputs);
-        inputs.remove("Score");
-        for (PlayerColor pc : PlayerColor.values()) {
-            inputs.removeIf(f -> f.startsWith(pc.name()));
-        }
-        inputCols = inputs.toArray(new String[0]);
-
-        VectorAssembler assembler = new VectorAssembler()
-            .setInputCols(inputCols)
-            .setOutputCol("features");
-
-        Dataset<Row> vectorData = assembler.transform(df);
-
-        // Create and train the model
-        LinearRegression lr = new LinearRegression().setFeaturesCol("features").setLabelCol("Score");
-        model = lr.train(vectorData);
-
-        spark.close();
-    }
-
-    public Draw machineLearning(GameRound round) {
-        List<Draw> draws = nextDraws(round);
-        List<RatedDraw> ratedDraws = new ArrayList<>();
-        for (Draw draw : draws) {
-            ExtendedGameRound gr = manualDraw(round, draw);
-            List<Integer> list = createVectorizedBoard(gr.getGameRound(), false);
-            double[] doubles = list.stream().mapToDouble(f -> (double)f).toArray();
-            Vector vector = Vectors.dense(doubles);
-            double value = model.predict(vector);
-            ratedDraws.add(RatedDraw.builder().draw(draw).rating(value).build());
-        }
-        ratedDraws.sort(Comparator.comparing(RatedDraw::getRating).reversed());
-        int maxIndex = Math.min(ratedDraws.size(), 3);
-        return ratedDraws.get(RANDOM.nextInt(maxIndex)).getDraw();
-    }
-
-    @Getter
-    @Setter
-    @Builder
-    private static class RatedDraw {
-        private Draw draw;
-        private Double rating;
     }
 }
